# benchmarks-react-svelte-vue

./: .gitignore  LICENSE  README.md  bench_it_all.bash  generate_graph.bash  graph.gnuplot  headers.csv  headers_runtime.csv  install_on_server.bash  package-lock.json  package.json  playwright.config.js  results.csv  results_details.ods  results_runtime.csv  runtime_test.bash  suite.bash  test.bash  update_readme_results.bash
angular/: angular.json  package-lock.json  package.json
apps/angular/: angular.json  package.json
apps/angular-static-pnpm/: pnpm-lock.yaml
apps/react/: .env
apps/react-next-static-pnpm/: package.json  pnpm-lock.yaml
apps/react-static-pnpm/: pnpm-lock.yaml
apps/react-vite-static-pnpm/: pnpm-lock.yaml
apps/solid/: package.json
apps/svelte-kit/: svelte.config.js
apps/svelte-kit-static-pnpm/: pnpm-lock.yaml
apps/svelte-static-pnpm/: index.html  pnpm-lock.yaml
apps/vue-nuxt/: .gitignore  nuxt.config.js
apps/vue-nuxt-static-pnpm/: nuxt.config.js  package.json  pnpm-lock.yaml
apps/vue-static-pnpm/: package.json  pnpm-lock.yaml  tsconfig.json
graphs/: .gitignore  Cargo.toml
graphs/src/: main.rs
output/: dedi-2023-07_runtime.csv  dedi.csv  dedi_runtime.csv  local.csv  local_runtime.csv  vps.csv  vps_runtime.csv
output/local/: angular.csv  vue.csv  (+6 more)
react/: package-lock.json  package.json
react-next/: package.json
react-vite/: package.json
svelte/: package.json
svelte-kit/: package.json  svelte.config.js
tests/: base_test.js  todo_app.spec.js
vue/: package.json
vue-nuxt/: README.md  nuxt.config.js  package.json
(+64 files in other folders)
