[package]
name = "graphs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["cargo"] }
csv = { version = "1.3", features = [] }
plotters = { version = "0.3", features = [] }
serde = { version = "1.0", features = [ "derive" ] }
